# openHEVC

./: .gitattributes  .gitignore  .project  Android.mk  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt~  Makefile  README.md  arch.mak  avcodec.h  cmake_install.cmake  cmdutils.c  cmdutils.h  common.mak  config.asm  config.h  configure  csfml.c  decana.c  decana.h  getopt.c  getopt.h  index.html  main.c  ohplay.c  openHevcWrapper.c  openHevcWrapper.h  params.json  sdl.c  sdl2.c  uninstall_target.cmake  version.h
MyCMakeScripts/: FindCRYPTOPP_FOUND.cmake  FindCSFML.cmake  FindCryptopp.cmake  FindSDL2.cmake  FindYasm.cmake  OptimizeForArchitecture.cmake
compat/: w32pthreads.h
dsp/: errno.h  fcntl.h
ffbuild/: arch.mak  common.mak  library.mak  pkgconfig_generate.sh  version.sh
libavcodec/: Makefile  allcodecs.c  armpmu_lib.h  avcodec.h  avfft.h  avpacket.c  bitstream.c  bsf_list.c  bswapdsp.c  cabac.c  cabac.h  cabac_functions.h  cabac_tablegen.c  cabac_tablegen.h  crypto.cpp  crypto.h  dsputil.c  dsputil.h  dsputil_template.c  eco_param.h  faanidct.c  fft_template.c  frame_thread_encoder.h  get_bits.h  h264.c  h264.h  h2645_parse.c  h2645_parse.h  h264_cabac.c  h264_nal.h  h264_parse.c  h264_parser.c  h264_picture.c  h264_ps.c  h264_refs.c  h264_sei.c  h264_slice.c  h264chroma.c  h264chroma.h  h264dec.c  (+69 more)
libavformat/: Makefile  allformats.c  avformat.h  avio.c  aviobuf.c  concat.c  file.c  gopher.c  hevcdec.c  hls.c  http.c  id3v2.c  internal.h  isom.c  matroskadec.c  mmsh.c  mmst.c  mov.c  movenc.c  movenchint.c  mpegts.c  mpegts.h  mux.c  network.c  network.h  oggdec.c  oggparsevorbis.c  options.c  os_support.c  os_support.h  protocol_list.c  protocols.c  rawdec.h  riff.h  rtpenc.h  sctp.c  tcp.c  tee.c  udp.c  unix.c  (+1 more)
libavutil/: Makefile  bprint.c  buffer.c  common.h  cpu.c  cpu.h  dict.c  error.h  eval.c  ffversion.h  frame.c  frame.h  imgutils.c  internal.h  libm.h  log.c  mathematics.c  mathematics.h  md5.c  md5.h  mem.c  mem.h  parseutils.c  random_seed.c  sha512.d  time.c  timer.h  version.h
libkvz/: Makefile  Makefile.in  bitstream.c  bitstream.h  cabac.c  cabac.h  cfg.c  cli.c  context.c  context.h  encode_coding_tree.c  encoder.c  encoderstate.c  filter.c  global.h  (+47 more)
wrapper_hm/: CMakeLists.txt
wrapper_hm/HM/: .cproject  .project  CMakeLists.txt  README-newconfig.txt
wrapper_hm/HM/cfg/: encoder_intra_he10.cfg  encoder_intra_main.cfg  encoder_intra_main10.cfg  encoder_lowdelay_P_he10.cfg  encoder_lowdelay_P_main.cfg  encoder_lowdelay_P_main10.cfg  encoder_lowdelay_he10.cfg  encoder_lowdelay_main.cfg  encoder_lowdelay_main10.cfg  encoder_randomaccess_he10.cfg  encoder_randomaccess_main.cfg  encoder_randomaccess_main10.cfg
wrapper_hm/HM/cfg/per-sequence/: BQMall.cfg  BQSquare.cfg  BQTerrace.cfg  BasketballDrill.cfg  BasketballDrillText.cfg  BasketballDrive.cfg  BasketballPass.cfg  BlowingBubbles.cfg  Cactus.cfg  ChinaSpeed.cfg  FourPeople.cfg  Johnny.cfg  Kimono.cfg  KristenAndSara.cfg  NebutaFestival_10bit.cfg  ParkScene.cfg  PartyScene.cfg  PeopleOnStreet.cfg  RaceHorses.cfg  RaceHorsesC.cfg  SlideEditing.cfg  SlideShow.cfg  SteamLocomotiveTrain_10bit.cfg  Traffic.cfg  Vidyo1.cfg  Vidyo3.cfg  Vidyo4.cfg
wrapper_hm/HM/doc/: Doxyfile  Makefile  README_data-structure.ppt  README_software-manual.txt  mainpage.h  software-manual.tex
wrapper_hm/HM/source/App/TAppDecoder/: TAppDecCfg.cpp  TAppDecCfg.h  TAppDecTop.cpp  TAppDecTop.h  decmain.cpp
wrapper_hm/HM/source/App/TAppEncoder/: TAppEncCfg.cpp  TAppEncCfg.h  TAppEncTop.cpp  TAppEncTop.h  encmain.cpp
wrapper_hm/HM/source/App/utils/: annexBbytecount.cpp  convert_NtoMbit_YCbCr.cpp
wrapper_hm/HM/source/App/utils/BitrateTargeting/: ExtractBitrates.cpp  ExtractBitrates.h  ExtractBitratesMain.cpp  GuessLambdaModifiers.cpp  GuessLambdaModifiers.h  GuessLambdaModifiersMain.cpp  RuntimeError.h  encode.shl  encodeCommand.sh  makefile  targetBitrates.sh
wrapper_hm/HM/source/Lib/TAppCommon/: program_options_lite.cpp  program_options_lite.h
wrapper_hm/HM/source/Lib/TLibCommon/: AccessUnit.h  CommonDef.h  ContextModel.cpp  ContextModel.h  ContextModel3DBuffer.cpp  ContextModel3DBuffer.h  ContextTables.h  NAL.h  SEI.cpp  SEI.h  TComAdaptiveLoopFilter.cpp  TComAdaptiveLoopFilter.h  TComBitCounter.h  TComBitStream.cpp  TComBitStream.h  TComCABACTables.cpp  TComCABACTables.h  TComDataCU.cpp  TComDataCU.h  TComInterpolationFilter.cpp  TComInterpolationFilter.h  TComList.h  TComLoopFilter.cpp  TComLoopFilter.h  TComMotionInfo.cpp  TComMotionInfo.h  TComMv.h  TComPattern.cpp  TComPattern.h  TComPic.cpp  TComPic.h  TComPicSym.cpp  TComPicSym.h  TComPicYuv.cpp  TComPicYuv.h  TComPicYuvMD5.cpp  TComPrediction.cpp  TComPrediction.h  TComRdCost.cpp  TComRdCost.h  (+15 more)
wrapper_hm/HM/source/Lib/TLibDecoder/: AnnexBread.cpp  AnnexBread.h  NALread.cpp  NALread.h  SEIread.cpp  SEIread.h  SyntaxElementParser.cpp  SyntaxElementParser.h  TDecBinCoder.h  TDecBinCoderCABAC.cpp  TDecBinCoderCABAC.h  TDecCAVLC.cpp  TDecCAVLC.h  TDecCu.cpp  TDecCu.h  TDecEntropy.cpp  TDecEntropy.h  TDecGop.cpp  TDecGop.h  TDecSbac.cpp  TDecSbac.h  TDecSlice.cpp  TDecSlice.h  TDecTop.cpp  TDecTop.h
wrapper_hm/HM/source/Lib/TLibEncoder/: AnnexBwrite.h  NALwrite.cpp  NALwrite.h  SEIwrite.cpp  SEIwrite.h  SyntaxElementWriter.cpp  SyntaxElementWriter.h  TEncAdaptiveLoopFilter.cpp  TEncAdaptiveLoopFilter.h  TEncAnalyze.cpp  TEncAnalyze.h  TEncBinCoder.h  TEncBinCoderCABAC.cpp  TEncBinCoderCABAC.h  TEncBinCoderCABACCounter.cpp  TEncBinCoderCABACCounter.h  TEncCavlc.cpp  TEncCavlc.h  TEncCfg.h  TEncCu.cpp  TEncCu.h  TEncEntropy.cpp  TEncEntropy.h  TEncGOP.cpp  TEncGOP.h  TEncPic.cpp  TEncPic.h  TEncPreanalyzer.cpp  TEncPreanalyzer.h  TEncRateCtrl.cpp  TEncRateCtrl.h  TEncSampleAdaptiveOffset.cpp  TEncSampleAdaptiveOffset.h  TEncSbac.cpp  TEncSbac.h  TEncSearch.cpp  TEncSearch.h  TEncSlice.cpp  TEncSlice.h  TEncTop.cpp  (+3 more)
wrapper_hm/HM/source/Lib/TLibVideoIO/: TVideoIOYuv.cpp  TVideoIOYuv.h
wrapper_hm/HM/source/Lib/libmd5/: MD5.h  libmd5.h
wrapper_hm/src/App/decoder/: decoder.c  sdl.c
wrapper_hm/src/Lib/wrapper/: wrapper.cpp  wrapper.h
(+232 files in other folders)
